feat: create content batches atomically
